--- a/paper/ms_diff.tex
+++ b/paper/ms_diff.tex
@@ -1,6 +1,13 @@
 \documentclass{emulateapj}
+%DIF LATEXDIFF DIFFERENCE FILE
+%DIF DEL ms_old.tex   Thu Aug 25 10:14:23 2016
+%DIF ADD ms.tex       Thu Aug 25 17:15:06 2016
 \submitted{{\it Submitted for publication in ApJL}}
-\usepackage{multirow,color,wrapfig}
+%DIF 3c3
+%DIF < \usepackage{multirow,color,wrapfig,ulem}
+%DIF -------
+\usepackage{multirow,color,wrapfig} %DIF > 
+%DIF -------
 \usepackage {graphicx}
 \usepackage{graphics}
 \usepackage[dvips]{epsfig}
@@ -55,6 +62,25 @@
 \newcommand{\lth}{$\lambda_{th}$ }
 \newcommand{\reff}{{\ifmmode{r_{\mbox{\tiny eff}}}\else{$r_{\mbox{\tiny eff}}$}\fi}}
 %#########################################################################
+%DIF PREAMBLE EXTENSION ADDED BY LATEXDIFF
+%DIF UNDERLINE PREAMBLE %DIF PREAMBLE
+\RequirePackage[normalem]{ulem} %DIF PREAMBLE
+\RequirePackage{color}\definecolor{RED}{rgb}{1,0,0}\definecolor{BLUE}{rgb}{0,0,1} %DIF PREAMBLE
+\providecommand{\DIFadd}[1]{{\protect\color{blue}\uwave{#1}}} %DIF PREAMBLE
+\providecommand{\DIFdel}[1]{{\protect\color{red}\sout{#1}}}                      %DIF PREAMBLE
+%DIF SAFE PREAMBLE %DIF PREAMBLE
+\providecommand{\DIFaddbegin}{} %DIF PREAMBLE
+\providecommand{\DIFaddend}{} %DIF PREAMBLE
+\providecommand{\DIFdelbegin}{} %DIF PREAMBLE
+\providecommand{\DIFdelend}{} %DIF PREAMBLE
+%DIF FLOATSAFE PREAMBLE %DIF PREAMBLE
+\providecommand{\DIFaddFL}[1]{\DIFadd{#1}} %DIF PREAMBLE
+\providecommand{\DIFdelFL}[1]{\DIFdel{#1}} %DIF PREAMBLE
+\providecommand{\DIFaddbeginFL}{} %DIF PREAMBLE
+\providecommand{\DIFaddendFL}{} %DIF PREAMBLE
+\providecommand{\DIFdelbeginFL}{} %DIF PREAMBLE
+\providecommand{\DIFdelendFL}{} %DIF PREAMBLE
+%DIF END PREAMBLE EXTENSION ADDED BY LATEXDIFF
 
 \begin{document}
 
@@ -117,7 +143,8 @@ Galaxies: halos --- Dark matter --- Methods: numerical
 In the current structure formation paradigm the properties of galaxies
 are coupled to the evolution of their dark matter (DM) hosting halo.
 In this paradigm the sizes and dynamics of galaxies are driven by
-the halo internal DM distribution. 
+the \DIFdelbegin \DIFdel{DM distribution inside a halo. This has motivated the detailed study
+a DM halo internal structure in the last three decades}\DIFdelend \DIFaddbegin \DIFadd{halo internal DM distribution}\DIFaddend . 
 
 The internal DM distribution in a halo is usually parameterized
 through the density profile.  
@@ -126,9 +153,9 @@ density only depends on the radial coordinate.
 One of the most popular radial parameterizations is the
 Navarro-Frenk-White (NFW) profile \citep{NFW}.   
 This profile can be considered as universal \citep{Navarro2010}, assuming that 
-one is not interested in the very central region where galaxy
-formation takes place, and where the effects of baryon physics on the
-dark matter distribution are still unknown. 
+one is not interested in the very central region \DIFdelbegin \DIFdel{of the dark matter halo }\DIFdelend where galaxy
+formation takes place, and where the effects of baryon physics on \DIFaddbegin \DIFadd{the
+}\DIFaddend dark matter distribution are still unknown. 
 This profile is a double power law in radius, where the transition
 break happens at the so-called scale radius, $r_s$.  
 The ratio between the scale radius and the halo virial radius $R_v$ is
@@ -138,21 +165,27 @@ known as the concentration $c=R_v/r_s$.
 The concentration of the NFW profile provides a conceptual framework
 to study simulated dark matter halos as a function of redshift and
 cosmological parameters.  
-Numerical studies
+\DIFdelbegin \DIFdel{In many numerical studies
+\mbox{%DIFAUXCMD
+\citep{Neto2007,Maccio2008,Duffy2008,Munoz2011,Prada2012,Ludlow2014}
+}%DIFAUXCMD
+the results are summarized }\DIFdelend \DIFaddbegin \DIFadd{Numerical studies
+\mbox{%DIFAUXCMD
 \citep{Neto2007,Maccio2008,Duffy2008,Munoz2011,Prada2012,Ludlow2014,Ludlow2016,Klypin2016}
-summarized their results through the mass-concentration
-relationship; that is, the distribution of concentration values at a
+}%DIFAUXCMD
+summarized their results }\DIFaddend through the mass-concentration
+relationship; that is\DIFaddbegin \DIFadd{, }\DIFaddend the distribution of concentration values at a
 fixed halo mass and redshift.  
 The success of such numerical experiments rests on a reliable
 algorithm to estimate the concentration.  
 Such an algorithm should provide unbiased results and must be robust
-when applied at varying numerical resolution. 
+when applied \DIFdelbegin \DIFdel{to simulations of different }\DIFdelend \DIFaddbegin \DIFadd{at varying }\DIFaddend numerical resolution. 
 
 There are two established algorithms to estimate the concentration
-parameter.
+parameter\DIFdelbegin \DIFdel{of a N-body dark matter halo}\DIFdelend .
 The first method takes the halo particles and bins them into
 logarithmic radii to estimate the density in each bin, then it
-proceeds to fit the density as a function of the radius.  
+proceeds to fit the density as a function of the radius\DIFdelbegin \DIFdel{to the NFW profile}\DIFdelend .  
 A second method uses an analytic property of the NFW profile that
 relates the maximum of the ratio of the circular velocity to the
 virial velocity, $V_{\rm circ}$/$V_{\rm   vir}$.  The concentration
@@ -170,8 +203,9 @@ the concentration.
 The second method solves the two problems mentioned above.  
 It works with low particle numbers and does not involve data binning.  
 However, it effectively takes into account only a single data point
-and discards the rest of the data.
-Small fluctuations on the maximum can yield large perturbations on the
+and discards the \DIFdelbegin \DIFdel{behavior of the ratio $V_{\rm circ}/V_{\rm vir}$ below
+and above its maxima}\DIFdelend \DIFaddbegin \DIFadd{rest of the data}\DIFaddend .
+Small fluctuations on the \DIFdelbegin \DIFdel{value of this }\DIFdelend maximum can yield large perturbations on the
 estimated concentration parameter.
 
 In this letter we use bootstrapping to estimate the bias and standard
@@ -264,7 +298,7 @@ f(x) = \ln\left(1+x\right)-\left(\frac{x}{x+1}\right).
 The most interesting feature of Eq. (\ref{eq:profile}) is that the
 concentration is the only free parameter to describe the integrated
 mass profile.
- 
+
 \subsection{Circular velocity profile}
 
 It is also customary to express the mass of the halo in terms of the
@@ -301,7 +335,8 @@ corresponds to the definition in Eq. (\ref{eq:f_NFW}).
   high resolution and its bootstrapped versions. 
   Thick (thin) lines correspond to massive halos in the Bolshoi (Via
   Lactea) simulation.
-  The density method noticeably overestimates the concentration up to
+  \DIFdelbeginFL \DIFdelFL{For each case close to $10000$ bootstrapping samples are used.
+  }\DIFdelendFL The density method noticeably overestimates the concentration up to
   a factor of $20\%$, 
   while the new method only underestimates the concentrations by less
   than $3\%$.
@@ -317,7 +352,9 @@ corresponds to the definition in Eq. (\ref{eq:f_NFW}).
   sampling. 
   To allow a fair comparison with $f_{\rm off}$, this uncertainty has
   been normalized by the preferred concentration value for each halo. 
-  \label{fig:downsampling}}
+  \DIFdelbeginFL \DIFdelFL{The $1\sigma$ bootstrapping uncertainty follow a $1/\sqrt{N_s}$
+  behaviour. 
+  }\DIFdelendFL \label{fig:downsampling}}
 \end{figure*}
 
 
@@ -329,37 +366,55 @@ corresponds to the definition in Eq. (\ref{eq:f_NFW}).
 
 To date, there are two standard methods to estimate concentrations in
 dark matter halos extracted from N-body simulations.  The first method
-takes all the particles in the halo and bins them in the logarithm of
+\DIFdelbegin \DIFdel{tries to directly estimate the density profile.  It }\DIFdelend takes all the particles in the halo and bins them in the logarithm of
 the radial coordinate from the halo center.  Then, it estimates the
-density in each logarithmic bin.  At this point is possible to make a
+density in each logarithmic bin\DIFdelbegin \DIFdel{counting the particles and dividing by the
+corresponding shell volume}\DIFdelend .  At this point is possible to make a
 direct fit to the density as a function of the radial coordinate.
 This method has been broadly used for more than two decades to study
 the mass-concentration-redshift relation of dark matter halos. 
-A second method uses the circular velocity profile.  It finds the
+\DIFdelbegin %DIFDELCMD < 
+
+%DIFDELCMD < %%%
+\DIFdelend A second method uses the circular velocity profile.  It finds the
 value of $x$ for which the normalized circular velocity $v(<x)$ shows
 a maximum.  Using this value it solves numerically for the
 corresponding value of the concentration using Eq. (\ref{eq:max_v}). 
+\DIFdelbegin \DIFdel{This method has been most recently used by \mbox{%DIFAUXCMD
+\cite{Klypin2016}
+}%DIFAUXCMD
+to study
+the mass-concentration-redshift relation using the Multidark
+Simulation Suite.
+}\DIFdelend 
 
 
 \subsection{Estimate from the integrated mass profile}
 
 Here we propose a new method to estimate the concentration. 
 It uses the integrated mass profile defined in
-Eq. (\ref{eq:profile}).  We build it from N-body data as follows.
+Eq. (\ref{eq:profile}).  We build it from N-body data \DIFdelbegin \DIFdel{following the
+next steps}\DIFdelend \DIFaddbegin \DIFadd{as follows}\DIFaddend .
 First, we define the center of the halo to be at the position of the
 particle with the lowest gravitational potential. Then we rank the
 particles by their increasing radial distance from the center.  From
 this ranked list of $i=1,N$ particles, the total mass at a radius
 $r_i$ is $M_i=i\times m_p$, where $r_i$ is the position of the $i$-th
 particle and $m_p$ is the mass of a single computational particle. 
-We then divide the enclosed mass $M_i$ and the radii $r_i$ by their
-virial values to finally obtain the dimensionless variables $m_i$ and
+\DIFdelbegin %DIFDELCMD < 
+
+%DIFDELCMD < %%%
+\DIFdel{We }\DIFdelend \DIFaddbegin \DIFadd{We then }\DIFaddend divide the enclosed mass $M_i$ and the radii $r_i$ by their
+virial values to \DIFaddbegin \DIFadd{finally }\DIFaddend obtain the dimensionless variables $m_i$ and
 $x_i$. 
+\DIFdelbegin \DIFdel{Once the mass profile is expressed in dimensionless variables the
+concentration is the only free parameter.  
+}\DIFdelend 
 
 
 Using bootstrapping data (\S \ref{sec:bootstrapping}) we find that at
 a given normalized radius, $x$, the logarithm of the normalized
-integrated mass, $m$, approximately follows a Gaussian distribution
+integrated mass, $m$, approximately follows a \DIFdelbegin \DIFdel{gaussian }\DIFdelend \DIFaddbegin \DIFadd{Gaussian }\DIFaddend distribution
 with variance
 
 \begin{equation}
@@ -368,11 +423,12 @@ with variance
 \end{equation}
 
 If the integrated mass values at different radii were independent from
-each other we could write a likelihood distribution as ${\cal
-  L}(c|x_i)\propto \exp(-\chi^2(c,x_i)/2)$ with   
+each other we could write a likelihood distribution as \DIFdelbegin \DIFdel{${\cal
+  L}(c)\propto \exp(-\chi^2(c)/2)$ }\DIFdelend \DIFaddbegin \DIFadd{${\cal
+  L}(c|x_i)\propto \exp(-\chi^2(c,x_i)/2)$ }\DIFaddend with   
 
 \begin{equation}
-\chi^2(c,x_i)= \sum_{i=2}^{N-1}\frac{[\log m_i - \log m(< x_i;c)]^2}{\sigma_i^2},
+\chi^2(c\DIFaddbegin \DIFadd{,x_i}\DIFaddend )= \sum_{i=2}^{N-1}\frac{[\log m_i - \log m(< x_i;c)]^2}{\sigma_i^2},
 \end{equation}
 %
 where $\sigma_i^2=\sigma_x^2(x_i)$, $m(<x_i;c)$ corresponds to the
@@ -384,15 +440,15 @@ avoid divergent terms in the sum.
 
 However, tests on the bootstrapping data show that using
 $\sigma_i^2=\sigma_x^2(x_i)$, instead of the full inverse covariance
-matrix, grossly overestimates $\chi^2(c,x_i)$,
+matrix, grossly overestimates \DIFdelbegin \DIFdel{$\chi^2(c)$}\DIFdelend \DIFaddbegin \DIFadd{$\chi^2(c,x_i)$}\DIFaddend ,
 providing small uncertainties around the best concentration value. 
 To avoid the expensive computation and inversion of a full covariance
-matrix we use the bootstrapping data to calibrate an effective
+matrix we use the \DIFdelbegin \DIFdel{bootsrapping }\DIFdelend \DIFaddbegin \DIFadd{bootstrapping }\DIFaddend data to calibrate an effective
 $\sigma_i^2\approx \sigma_{\rm eff}^2(x_i)$.
 
 We impose two conditions on the approximate $\sigma_{\rm eff}^{2}$. It
 must keep the dependence on $x$ that we have discovered for the
-diagonal elements and must give similar curves of $\chi^{2}(c,x_i)$-$c$
+diagonal elements and must give similar curves of \DIFdelbegin \DIFdel{$\chi^{2}(c)$}\DIFdelend \DIFaddbegin \DIFadd{$\chi^{2}(c,x_i)$}\DIFaddend -$c$
 around the minimum as the full covariance matrix.
 We found that this effective $\sigma_{\rm eff}^2$ can be approximated
 as 
@@ -404,23 +460,25 @@ as
 We then use an Affine Invariant Markov Chain Monte Carlo (MCMC)
 implemented in the python module {\texttt{emcee}} \citep{emcee} to sample the
 likelihood function distribution.
-From the $\chi^2$ distribution we find the optimal concentration value
-and its associated uncertainty.   
-We stress that different choices for $\sigma^2_{\rm eff}$ do not
+From the $\chi^2$ distribution we find the optimal \DIFdelbegin \DIFdel{value of the
+concentration }\DIFdelend \DIFaddbegin \DIFadd{concentration value
+}\DIFaddend and its associated uncertainty.   
+\DIFdelbegin \DIFdel{Different }\DIFdelend \DIFaddbegin \DIFadd{We stress that different }\DIFaddend choices for $\sigma^2_{\rm eff}$ do not
 affect the optimal concentration value, only its uncertainty.
 
-Run-time is roughly proportional to $N$. Using a single 2.3Ghz CPU core with two
+\DIFaddbegin \DIFadd{Run-time is roughly proportional to $N$. Using a single 2.3Ghz CPU core with two
 walkers over 500 steps takes $\sim 0.5$ milliseconds per halo per
 particle in the halo, i.e. a halo with $N=2\times 10^{3}$ can be fit
 in one second. 
+}
 
 
 
 
-\section{Numerical Simulations and Halo Samples}
+\DIFaddend \section{Numerical Simulations and Halo Samples}
 
-We use two different simulations to test our methods.
-The first is the Bolshoi run, a cosmological simulation that follows
+We use two \DIFdelbegin \DIFdel{very }\DIFdelend different simulations to test our methods.
+The first \DIFdelbegin \DIFdel{data sample comes from }\DIFdelend \DIFaddbegin \DIFadd{is }\DIFaddend the Bolshoi run, a cosmological simulation that follows
 the non-linear evolution of a dark matter density field sampled with
 $2048^3$ particles over a cubic box of $250\ \hMpc$ on a side.   The
 cosmological parameters use a Hubble parameter $h=0.73$, a matter
@@ -428,10 +486,16 @@ density $\Omega_m=0.3071$ and a normalization of the power spectrum
 $\sigma_8=0.82$. 
 The data is publicly available at \url{http://www.cosmosim.org/}.  
 Details about the structure of the database and the simulation can be
-found in \citep{2011ApJ...740..102K,2013AN....334..691R}.
+found in \DIFdelbegin \DIFdel{\mbox{%DIFAUXCMD
+\citep{2013AN....334..691R}
+}%DIFAUXCMD
+}\DIFdelend \DIFaddbegin \DIFadd{\mbox{%DIFAUXCMD
+\citep{2011ApJ...740..102K,2013AN....334..691R}
+}%DIFAUXCMD
+}\DIFaddend .
 
-We use the halos located in a cubic sub-volume of $100$ \hMpc\ on a
-side containing a total of $64531$ objects.
+We use \DIFdelbegin \DIFdel{a halo sample containing all }\DIFdelend the halos located in a cubic sub-volume of $100$ \hMpc\ on a
+side containing a total of $64531$ \DIFdelbegin \DIFdel{halos}\DIFdelend \DIFaddbegin \DIFadd{objects}\DIFaddend .
 From this sample we select all the halos at $z=0$ detected with a
 Friends-of-Friends (FoF) algorithm with more than 300 particles,
 meaning that the masses are in the interval $4\times 10^{10}\leq
@@ -441,7 +505,8 @@ This choice translates into an overdensity $\Delta_h\sim 400-700$
 dependent on the halo concentration \citep{More2011}.
 
 From this set of particles we follow the procedure spelled out in
-Section \ref{sec:method} with $\Delta_h=740$ to select an spherical
+Section \ref{sec:method} with $\Delta_h=740$ \DIFdelbegin \DIFdel{(corresponding to $200$
+times the critical density) }\DIFdelend to select an spherical
 region that we redefine to be our halo.  
 This choice makes that the overdensities are fully included inside the
 original FoF particle group.   
@@ -451,17 +516,17 @@ particles ($2.6\times 10^{10}$\hMsun).
 
 We also use public data from the Via Lactea simulation project
 \citep{2008Natur.454..735D}.  
-This simulation contains a single isolated halo with a virial mass
-of the order of $10^{12}$\hMsun simulated using the tree code PKDGRAV
+This simulation \DIFdelbegin \DIFdel{was run for }\DIFdelend \DIFaddbegin \DIFadd{contains }\DIFaddend a single isolated halo with a virial mass
+of the order of $10^{12}$\hMsun \DIFdelbegin \DIFdel{using the parallel }\DIFdelend \DIFaddbegin \DIFadd{simulated using the }\DIFaddend tree code PKDGRAV
 \citep{2001PhDT........21S}.  
-The simulation had $\sim 2\times 10^{8}$ particles to resolve this
+The simulation \DIFdelbegin \DIFdel{used }\DIFdelend \DIFaddbegin \DIFadd{had }\DIFaddend $\sim 2\times 10^{8}$ particles to resolve this
 region.
 The cosmological parameters are different from those in the Bolshoi
 simulation, with a Hubble parameter $h=0.73$, a matter density
 $\Omega_m=0.238$ and a normalization of the power spectrum
 $\sigma_8=0.74$. 
 The data available to the public corresponds to a downsampled set 
-of $10^5$ particles, which corresponds to a particle mass of
+of $10^5$ particles\DIFaddbegin \DIFadd{, }\DIFaddend which corresponds to a particle mass of
 $2.24\times 10^{7}$\hMsun.  
 
 
@@ -497,21 +562,26 @@ $2.24\times 10^{7}$\hMsun.
 \subsection{Bootstrapping to estimate biases}
 \label{sec:bootstrapping}
 
-We take halos with at least $10^{5}$ particles and subsample them by
-factors of $2$ up to $10^{3}$. 
-We measure the concentration at every resampling.
+\DIFdelbegin \DIFdel{In our bootstrapping experiments we take halos sampled }\DIFdelend \DIFaddbegin \DIFadd{We take halos }\DIFaddend with at least $10^{5}$ particles and subsample \DIFdelbegin \DIFdel{each halo }\DIFdelend \DIFaddbegin \DIFadd{them }\DIFaddend by
+factors of $2$ up to $10^{3}$\DIFdelbegin \DIFdel{to }\DIFdelend \DIFaddbegin \DIFadd{. 
+We }\DIFaddend measure the concentration \DIFdelbegin \DIFdel{every time the halo is
+resampled.
+Every time }\DIFdelend \DIFaddbegin \DIFadd{at every resampling.
 We use a two-sample Kolmogorov-Smirnov (KS) test to  compare the list
 of radial distances from each subsample against that of its parent halo.
 We find that the resulting p-value distribution is flat.
 This confirms that the radial particle distribution in the bootraped
 halo is consistent with coming from the distribution given by the
 parent halo.  
+}
 
-For every subsample we keep fixed the virial radius and the center
+\DIFadd{For every subsample }\DIFaddend we keep fixed the virial radius and the center
 found for the high resolution halo.
-Leaving the virial radius and center free in each bootstrapping
+\DIFdelbegin \DIFdel{We tested that leaving }\DIFdelend \DIFaddbegin \DIFadd{Leaving }\DIFaddend the virial radius and center free in each bootstrapping
 iteration has an effect smaller than $1\%$ in the concentration. 
-In the Bolshoi simulation we select 14 massive halos and create 700
+\DIFdelbegin \DIFdel{We extract in total 10000 bootstrapping samples for the Bolshoi
+and the Via Lactea simulations.
+}\DIFdelend In the Bolshoi simulation we select 14 massive halos and create 700
 subsamples for each one.  
 For the Via Lactea simulation the same halo is subsampled 10000
 times. 
@@ -530,33 +600,48 @@ downsampled particle number $c_{N}$ and the baseline $c_{N_{max}}$.
 Figure \ref{fig:downsampling} summarizes our results.  
 The plot on the left shows the average value of $f_{\rm off}$ as a
 function of particle number.  
-This can be interpreted as the statistical bias on the concentration
+\DIFdelbegin \DIFdel{As expected, for a }\DIFdelend \DIFaddbegin \DIFadd{This can be interpreted as the statistical bias on the concentration
 estimate. 
-For large enough particle numbers, $N_{s}>4\times 10^3$ the results of
-the three algorithms show a bias below the $1\%$ level.
+For }\DIFaddend large enough particle \DIFdelbegin \DIFdel{number}\DIFdelend \DIFaddbegin \DIFadd{numbers}\DIFaddend , $N_{s}>4\times 10^3$ \DIFdelbegin \DIFdel{,
+}\DIFdelend the results of
+the three algorithms \DIFdelbegin \DIFdel{coincide }\DIFdelend \DIFaddbegin \DIFadd{show a bias }\DIFaddend below the $1\%$ level.
 For a lower number of particles the results start to deviate.
 At $200$ particles the velocity method overestimates the concentration
 by a factor $14\%$ while the density method overestimates it by $20\%$.
 Around the same sampling scale, the new algorithm shows a more stable
 behaviour underestimating the concentration only by a factor of
-$1\%$-$3\%$.
+$1\%$-$3\%$\DIFaddbegin \DIFadd{.
 Work  that studied the effect of
 lowering numerical resolution on the same individual halos
-\citep{2008MNRAS.391.1685S} yielded similar values for the
+\mbox{%DIFAUXCMD
+\citep{2008MNRAS.391.1685S}
+}%DIFAUXCMD
+yielded similar values for the
 concentration across resolutions.  That work  explored a particle
 number range $>5\times 10^5$, completely consistent with our result that the
 bias can only be evident for particle numbers $<4\times 10^3$. 
+}\DIFaddend 
 
 
-The thin lines on the same panel show a fit to the function 
-\begin{equation}
+The thin \DIFdelbegin \DIFdel{continous }\DIFdelend lines on the same panel \DIFdelbegin \DIFdel{shows }\DIFdelend \DIFaddbegin \DIFadd{show }\DIFaddend a fit to the \DIFdelbegin \DIFdel{data
+with the following functional form 
+}\begin{displaymath}\DIFdel{
+f_{\rm off} = \frac{A}{(1+\log_{10}N_s)^{B}}.
+\label{eq:f_off_fit}
+}\end{displaymath} 
+%DIFAUXCMD
+\DIFdel{for the dataset shown in the panel we find }\DIFdelend \DIFaddbegin \DIFadd{function 
+}\begin{equation}\DIFadd{
 f_{\rm off} = \frac{A}{(1+\log_{10}N_s)^{B}},
 \label{eq:f_off_fit}
-\end{equation} 
-%
-with $A=2842\pm 1900$, $B=7.96\pm 0.54$; $A=239\pm 131$, $B=6.23\pm
-0.43$ and $A=-0.46\pm 3.49$, $B=0.79\pm 1.31$ for the density,
-velocity and mass method, respectively. 
+}\end{equation} 
+%DIF > 
+\DIFadd{with }\DIFaddend $A=2842\pm 1900$, $B=7.96\pm 0.54$\DIFdelbegin \DIFdel{for the density method}\DIFdelend ; $A=239\pm 131$, $B=6.23\pm
+0.43$ \DIFdelbegin \DIFdel{for the velocity method; }\DIFdelend \DIFaddbegin \DIFadd{and }\DIFaddend $A=-0.46\pm 3.49$, $B=0.79\pm 1.31$ for the \DIFdelbegin \DIFdel{integrated mass method.
+The uncertainties are estimated from the covariance  matrix resulting
+from the non-linear optimization procedure. The lines on Figure
+\ref{fig:downsampling} are plotted using these best values}\DIFdelend \DIFaddbegin \DIFadd{density,
+velocity and mass method, respectively}\DIFaddend . 
 
 
 
@@ -574,40 +659,48 @@ $1\sigma$ uncertainty to the concentration values at a fixed $N_s$as
 \sigma_{c} = \frac{0.40}{\sqrt{N_s/200}}.
 \end{equation}
 %
+\DIFdelbegin \DIFdel{An interesting consequence of this result is that $\sigma_c=1$ for
+$N_s=32$ particles, independent of the method used to estimate the
+concentration.  
+}\DIFdelend 
 
-The circles in the same Figure show the $1\sigma$ uncertainty on all
-the relaxed halos in the Bolshoi simulation sample using the MCMC
-results.  
+The circles in the same Figure show the $1\sigma$ uncertainty \DIFdelbegin \DIFdel{as
+estimated from the MCMC chains using the integrated mass method }\DIFdelend on all
+the relaxed halos in the Bolshoi simulation sample \DIFaddbegin \DIFadd{using the MCMC
+results}\DIFaddend .  
 To allow for a fair comparison with the bootstrapping results, this
-uncertainty is normalized to the concentration value.
-The uncertainty from the bootstrapping experiment provides an upper
-bound uncertainty on the concentration estimate for individual halos.  
+uncertainty \DIFdelbegin \DIFdel{was normalized by }\DIFdelend \DIFaddbegin \DIFadd{is normalized to }\DIFaddend the concentration value.
+\DIFdelbegin \DIFdel{Below the range $N_{s}<10^5$ the MCMC uncertainty is lower than the bootstrapping estimate, with a weak dependence on the particle
+number}\DIFdelend \DIFaddbegin \DIFadd{The uncertainty from the bootstrapping experiment provides an upper
+bound uncertainty on the concentration estimate for individual halos}\DIFaddend .  
 
  
  
 \subsection{Impact on the Mass-Concentration Relationship}
 
-We now inspect the mass-concentration relationship 
-results with the three different algorithms.
-This can help us to identify possible consequences of the 
-biases detected through the bootstrapping experiments. 
+We now \DIFdelbegin \DIFdel{compare the results for }\DIFdelend \DIFaddbegin \DIFadd{inspect }\DIFaddend the mass-concentration relationship 
+\DIFdelbegin \DIFdel{obtained }\DIFdelend \DIFaddbegin \DIFadd{results }\DIFaddend with the three different algorithms.
+This \DIFdelbegin \DIFdel{helps us to study the concentration results
+for the new algorithm and, more importantly, showcase a probable
+consequence }\DIFdelend \DIFaddbegin \DIFadd{can help us to identify possible consequences }\DIFaddend of the 
+biases detected through \DIFdelbegin \DIFdel{bootstrapping}\DIFdelend \DIFaddbegin \DIFadd{the bootstrapping experiments}\DIFaddend . 
 
 
 Figure \ref{fig:concentration} shows the mass-concentration
 relationship for the density, velocity and integrated mass method.
 The left panel shows the results as they are produced by each of the
 algorithms. The thin dashed line marks the trend reported by
-\citep{Prada2012} using the velocity method, showing that our
-velocity method implementation can reproduce their results. 
+\citep{Prada2012} using the velocity method\DIFaddbegin \DIFadd{, showing that our
+velocity method implementation can reproduce their results}\DIFaddend . 
 
-The results from the new algorithm follow very
+\DIFdelbegin \DIFdel{We notice first that the }\DIFdelend \DIFaddbegin \DIFadd{The }\DIFaddend results from the new algorithm follow very
 closely the velocity algorithm at high masses ($M_h>10^{12}\hMsun$ or
 equivalently for $>4\times10^3$ particles). 
 For lower masses there is a difference between the median of the two
 methods, but they are still consistent within the statistical
 uncertainties.
 
-We hypothesize that the increase in the results for the velocity
+We \DIFaddbegin \DIFadd{hypothesize that the increase in the results for the velocity
 and density methods below $4\times 10^{3}$ particles comes from the
 systematic bias described in the previous section.  
 To test the general consistency of this hypothesis, we correct the
@@ -618,8 +711,9 @@ parameters obtained from the data presented in Figure
 (\ref{fig:downsampling}).  
 The correction brings into good agreement the results between the
 velocity/density methods and the new algorithm.
+}
 
-We also notice that the results from the density method have a
+\DIFadd{We }\DIFaddend also notice that the results from the density method have a
 systematic $15\%$ offset from the velocity methods.  
 This offset was already presented by \cite{Prada2012} for low
 concentrations ($c<6$) and high ($M_h>10^{12}\hMsun$) halo masses.  
@@ -633,19 +727,40 @@ However, they implemented a modified version of the velocity algorithm
 that bins the particle data, which might explain why they the offset
 was not reported.
 
-How do these results impact the most recent mass-concentration estimates? 
-\cite{Ludlow2016} and \cite{Klypin2016} estimated the mass-concentration
+\DIFdelbegin \DIFdel{We hypothesize that the increase in the results for the velocity
+and density methods below $4\times 10^{3}$ particles comes from the
+systematic bias described in the previous section.  
+To test the general consistency of this hypothesis, we correct the
+concentration values in the
+velocity and integrated mass methodsby a factor of $1/(1+f_{\rm  off})$, using the definition in Equation
+(\ref{eq:f_off}) and the  
+parameters obtained from the data presented in }\DIFdelend \DIFaddbegin \DIFadd{How do these results impact the most recent mass-concentration estimates? 
+\mbox{%DIFAUXCMD
+\cite{Ludlow2016}
+}%DIFAUXCMD
+and \mbox{%DIFAUXCMD
+\cite{Klypin2016}
+}%DIFAUXCMD
+estimated the mass-concentration
 relation over different suites of cosmological N-body simulations using the
 density and velocity methods, respectively. 
 Both used halos with at least $5\times 10^{3}$ particles.
-This imposes a lower halo mass limit of $\sim 10^{12}$\hMsun (Figure 8
-in \cite{Ludlow2016}, Figure 17 in \cite{Klypin2016}) to have robust
+This imposes a lower halo mass limit of $\sim 10^{12}$}\hMsun \DIFadd{(}\DIFaddend Figure \DIFdelbegin \DIFdel{(\ref{fig:downsampling}) .  
+The correction brings into good agreement the results between the velocity/density methods
+and the new algorithm}\DIFdelend \DIFaddbegin \DIFadd{8
+in \mbox{%DIFAUXCMD
+\cite{Ludlow2016}
+}%DIFAUXCMD
+, Figure 17 in \mbox{%DIFAUXCMD
+\cite{Klypin2016}
+}%DIFAUXCMD
+) to have robust
 estimates. 
 This means that their results for individual halos should not be
 affected by the bias we report here.
 However, this also leaves open the question about what other methods
-can robustly say about the flattening we report below $10^{12}$\Msun
-using the new method. 
+can robustly say about the flattening we report below $10^{12}$}\Msun
+\DIFadd{using the new method}\DIFaddend . 
 
 
 
@@ -654,58 +769,70 @@ using the new method.
 
 In this letter we used bootstrapping to quantify the biases on
 concentration estimates. 
-We found that methods commonly used in the literature can overestimate
-the concentrations by factors of $15\%$-$20\%$ for halos with $200$
+We found that methods commonly used in the literature \DIFdelbegin \DIFdel{present a large
+bias by overestimating }\DIFdelend \DIFaddbegin \DIFadd{can overestimate
+the }\DIFaddend concentrations by factors of $15\%$-$20\%$ for halos with $200$
 particles, or $7\%$-$10\%$ for halos with $500$ particles.  
 This procedure provides a robust technique to quantify the bias in
 concentration estimates with the advantage that it works without
 having to run new simulations. 
 
-These results motivated us to introduce a new method based on the
-integrated mass profile that show a robust performance at low particle
+These results motivated us to introduce a \DIFdelbegin \DIFdel{method with }\DIFdelend \DIFaddbegin \DIFadd{new method based on the
+integrated mass profile that show }\DIFaddend a robust performance at low particle
 numbers. 
-The new algorithm showed a bias  of $< 3\%$ for halos with $200$
+\DIFdelbegin \DIFdel{This method is based on the integrated mass profile. 
+The results of the algorithm on the same data sample }\DIFdelend \DIFaddbegin \DIFadd{The new algorithm }\DIFaddend showed a bias  of $< 3\%$ for halos with $200$
 particles and less than $1\%$ for halos with $500$ particles or more.  
 To keep the bias of the velocity and density methods below $2\%$ only halos
-with at least $\sim 4000$ particles should be considered.
+with at least $\sim 4000$ particles should be \DIFdelbegin \DIFdel{taken into account}\DIFdelend \DIFaddbegin \DIFadd{considered}\DIFaddend .
 
 
-The three methods are in broad agreement, within the statistical
-uncertainties, concerning their estimates of the  mass-concentration
+\DIFdelbegin \DIFdel{Measuring the mass concentration relationship the }\DIFdelend \DIFaddbegin \DIFadd{The }\DIFaddend three methods are in broad agreement\DIFaddbegin \DIFadd{, }\DIFaddend within the statistical
+uncertainties, \DIFdelbegin \DIFdel{although there
+are some noticeable differences . 
+For instance, the density method produces }\DIFdelend \DIFaddbegin \DIFadd{concerning their estimates of the  mass-concentration
 relationship. 
-Some noticeable differences include a $15\%$ systematically higher 
-concentrations in the density method compared to the velocity method.
+Some noticeable differences include a $15\%$ }\DIFaddend systematically higher 
+concentrations \DIFdelbegin \DIFdel{by a factor of $15\%$ }\DIFdelend \DIFaddbegin \DIFadd{in the density method }\DIFaddend compared to the velocity method.
 This systematic offset has been reported before with the same dataset 
 \citep{Prada2012} and with different simulations \citep{Klypin2016}
 without any conclusive explanation for its origin. 
-Another difference is that the velocity and integrated mass methods
+\DIFdelbegin \DIFdel{A second }\DIFdelend \DIFaddbegin \DIFadd{Another }\DIFaddend difference is that the velocity and integrated mass methods
 start to differ for masses below $10^{12}\hMsun$ ($\sim 4000$
 particles).   
 We found that correcting the mean concentration by the mean bias
 factor found through bootstrapping brings these two techniques into
 agreement. 
 
-These results show that using the integrated mass profile to estimate the
-DM halo concentrations is a tool deserving deeper scrutiny.   
+These results show that using the integrated mass profile to \DIFdelbegin \DIFdel{find the
+Dark Matter halo concentration }\DIFdelend \DIFaddbegin \DIFadd{estimate the
+DM halo concentrations }\DIFaddend is a tool deserving deeper scrutiny.   
 Further tests with larger simulated volumes, varying numerical
-resolution, higher redshifts, stacked data and different density
+resolution\DIFaddbegin \DIFadd{, higher redshifts, stacked data }\DIFaddend and different density
 profiles are the next natural step to explore the full potential of
 this new method.   
 
 \vspace{0.1cm}
 
- We acknowledge financial support from Uniandes
- and Universidad de Antioquia. 
+ \DIFdelbegin \DIFdel{The authors acknowledge the technical support from the new
+ high-performance computing facility at Uniandes. JEFR acknowledges
+ }\DIFdelend \DIFaddbegin \DIFadd{We acknowledge }\DIFaddend financial support from \DIFdelbegin \DIFdel{Vicerrector\'ia de Investigaciones at Uniandes
+ through a FAPA project. JCMC acknowledges financial support from
+ ``Estrategia de  sostenibilidad 2014-2015, }\DIFdelend \DIFaddbegin \DIFadd{Uniandes
+ and }\DIFaddend Universidad de Antioquia\DIFdelbegin \DIFdel{''}\DIFdelend \DIFaddbegin \DIFadd{. 
  We thank Tom\'as Verdugo, Stefan Gottloeber and Nelson  Padilla for
 their feedback.
 We thank the anonymous referee for comments that improved
-the presentation of these results. 
+the presentation of these results}\DIFaddend . 
 
 \bibliographystyle{apj}
 %\bibliography{references}
+\DIFdelbegin %DIFDELCMD < \begin{thebibliography}{15}
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin 
 
 \begin{thebibliography}{18}
-\expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
+\DIFaddend \expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
 
 \bibitem[{{Diemand} {et~al.}(2008){Diemand}, {Kuhlen}, {Madau}, {Zemp},
   {Moore}, {Potter}, \& {Stadel}}]{2008Natur.454..735D}
@@ -730,16 +857,18 @@ the presentation of these results.
 {Klypin}, A., {Yepes}, G., {Gottl{\"o}ber}, S., {Prada}, F., \& {He{\ss}}, S.
   2016, \mnras, 457, 4340
 
-\bibitem[{{Klypin} {et~al.}(2011){Klypin}, {Trujillo-Gomez}, \&
+\DIFaddbegin \bibitem[{{Klypin} {et~al.}(2011){Klypin}, {Trujillo-Gomez}, \&
   {Primack}}]{2011ApJ...740..102K}
-{Klypin}, A.~A., {Trujillo-Gomez}, S., \& {Primack}, J. 2011, \apj, 740, 102
+{\DIFadd{Klypin}}\DIFadd{, A.~A., }{\DIFadd{Trujillo-Gomez}}\DIFadd{, S., }\& {\DIFadd{Primack}}\DIFadd{, J. 2011, }\apj\DIFadd{, 740, 102
+}
 
 \bibitem[{{Ludlow} {et~al.}(2016){Ludlow}, {Bose}, {Angulo}, {Wang},
   {Hellwing}, {Navarro}, {Cole}, \& {Frenk}}]{Ludlow2016}
-{Ludlow}, A.~D., {Bose}, S., {Angulo}, R.~E., {Wang}, L., {Hellwing}, W.~A.,
-  {Navarro}, J.~F., {Cole}, S., \& {Frenk}, C.~S. 2016, \mnras, 460, 1214
+{\DIFadd{Ludlow}}\DIFadd{, A.~D., }{\DIFadd{Bose}}\DIFadd{, S., }{\DIFadd{Angulo}}\DIFadd{, R.~E., }{\DIFadd{Wang}}\DIFadd{, L., }{\DIFadd{Hellwing}}\DIFadd{, W.~A.,
+  }{\DIFadd{Navarro}}\DIFadd{, J.~F., }{\DIFadd{Cole}}\DIFadd{, S., }\& {\DIFadd{Frenk}}\DIFadd{, C.~S. 2016, }\mnras\DIFadd{, 460, 1214
+}
 
-\bibitem[{{Ludlow} {et~al.}(2014){Ludlow}, {Navarro}, {Angulo},
+\DIFaddend \bibitem[{{Ludlow} {et~al.}(2014){Ludlow}, {Navarro}, {Angulo},
   {Boylan-Kolchin}, {Springel}, {Frenk}, \& {White}}]{Ludlow2014}
 {Ludlow}, A.~D., {Navarro}, J.~F., {Angulo}, R.~E., {Boylan-Kolchin}, M.,
   {Springel}, V., {Frenk}, C., \& {White}, S.~D.~M. 2014, \mnras, 441, 378
@@ -785,13 +914,15 @@ the presentation of these results.
 {Riebe}, K., {Partl}, A.~M., {Enke}, H., {Forero-Romero}, J., {Gottl{\"o}ber},
   S., {Klypin}, A., {Lemson}, G., {Prada}, F., {Primack}, J.~R., {Steinmetz},
   M., \& {Turchaninov}, V. 2013, Astronomische Nachrichten, 334, 691
+\DIFaddbegin 
 
 \bibitem[{{Springel} {et~al.}(2008){Springel}, {Wang}, {Vogelsberger},
   {Ludlow}, {Jenkins}, {Helmi}, {Navarro}, {Frenk}, \&
   {White}}]{2008MNRAS.391.1685S}
-{Springel}, V., {Wang}, J., {Vogelsberger}, M., {Ludlow}, A., {Jenkins}, A.,
-  {Helmi}, A., {Navarro}, J.~F., {Frenk}, C.~S., \& {White}, S.~D.~M. 2008,
-  \mnras, 391, 1685
+{\DIFadd{Springel}}\DIFadd{, V., }{\DIFadd{Wang}}\DIFadd{, J., }{\DIFadd{Vogelsberger}}\DIFadd{, M., }{\DIFadd{Ludlow}}\DIFadd{, A., }{\DIFadd{Jenkins}}\DIFadd{, A.,
+  }{\DIFadd{Helmi}}\DIFadd{, A., }{\DIFadd{Navarro}}\DIFadd{, J.~F., }{\DIFadd{Frenk}}\DIFadd{, C.~S., }\& {\DIFadd{White}}\DIFadd{, S.~D.~M. 2008,
+  }\mnras\DIFadd{, 391, 1685
+}\DIFaddend 
 
 \bibitem[{{Stadel}(2001)}]{2001PhDT........21S}
 {Stadel}, J.~G. 2001, PhD thesis, UNIVERSITY OF WASHINGTON
