--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -296,9 +296,8 @@ corresponds to the definition in Eq. (\ref{eq:f_NFW}).
   \includegraphics[width=0.48\textwidth]{sigma_foff_bolshoi.pdf}
 \end{center}
 \vspace{-0.5cm}
-\caption{\emph{Left panel}. Average value of the fractional offset ($f_{\rm
-    off}$ (Eq. \ref{eq:f_off}) between the concentration in a halo at 
-  high resolution and its bootstrapped versions. 
+\caption{\emph{Left panel}. Bias estimated via bootstrapping on the
+  concentration as a function of particle number.
   Thick (thin) lines correspond to massive halos in the Bolshoi (Via
   Lactea) simulation.
   The density method noticeably overestimates the concentration up to
@@ -306,16 +305,13 @@ corresponds to the definition in Eq. (\ref{eq:f_NFW}).
   while the new method only underestimates the concentrations by less
   than $3\%$.
   \emph{Right panel.}
-  1$\sigma$ uncertainties on the offset and the concentration
-  estimates from the integrated mass method.  
+  1$\sigma$ uncertainties on the bootrsapped halos (lines) and the MCMC
+  uncertainties on the concentration estimates for each halo using the
+  integrated mass method (circles).   
   Lines show the width between the 14 and 86 percentiles
   of the $f_{\rm off}$ distribution at fixed particle number. 
-  The lines include the results for the three methods: maximum
-  velocity, density and integrated mass.
-  Grey symbols correspond to the $1\sigma$ uncertainty on each of
-  the halos in the Bolshoi Simulation as a result of the MCMC
-  sampling. 
-  To allow a fair comparison with $f_{\rm off}$, this uncertainty has
+  The lines include the results for the three methods using Bolshoi data.
+  To allow a fair comparison agains $f_{\rm off}$, the MCMC uncertainty has
   been normalized by the preferred concentration value for each halo. 
   \label{fig:downsampling}}
 \end{figure*}
