all files updated

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -388,9 +388,9 @@ $\sigma_i^2\approx \sigma_{\rm eff}^2(x_i)$.
 
 We impose two conditions on the approximate $\sigma_{\rm eff}^{2}$. It
 must keep the dependence on $x$ that we have discovered for the
-diagonal elements and must give similar curves of $\chi^{2}(c,x_i)$-$c$
-around the minimum as the full covariance matrix.
-We found that this effective $\sigma_{\rm eff}^2$ can be approximated
+diagonal elements and must give similar curves of $\chi^{2}(c,x_i)$
+vs. $c$ around the minimum as the full covariance matrix.
+We found that the effective $\sigma_{\rm eff}^2$ can be approximated
 as 
 
 \begin{equation}
